Add coming soon to next js

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,18 +1,125 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-  @import "base";
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-@layer components {
-  @import "components";
-  @import "navigation";
-  @import "buttons";
-  @import "search";
+html{
+    font-size: 62.5%; /* 1rem = 10px */
 }
 
-@layer utilities {
-  @import "utilities";
+body{
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    line-height: 1.7;
+    color: #232323;
+    
+}
+
+.main-title {
+    width: 100vw;
+    letter-spacing: 2px;
+}
+
+.main-title h1{
+    font-size: 2rem;
+
+    letter-spacing: 3px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 800;
+    color: #232323;
+    margin-bottom: 50px;
+}
+
+.main-title h6{
+    font-size: 2rem;
+    text-align: center;
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
+.svg-img{
+   display: block;
+   margin: auto;
+}
+
+svg{
+    display: block;
+   margin: auto;
+}
+
+#clock{
+    animation: clockHand 5s infinite linear;
+    
+    
+    transform-box: fill-box;
+    transform-origin: bottom;
+}
+
+#leftTree, #righTree{
+    animation: tree 2s ease-in-out infinite alternate;
+    transform-box: fill-box;
+    transform-origin: bottom;
+}
+
+#man{
+    animation: manBody 1s ease-in-out infinite alternate;
+    transform-box: fill-box;
+    transform-origin: bottom;
+}
+
+#pc-circle{
+    fill: #6ace66;
+    stroke-width: 4;
+    animation: change-light 4s linear infinite alternate;
+}
+
+@keyframes clockHand{
+    from{
+        transform: rotateZ(0deg);
+    }
+    from{
+        transform: rotateZ(-360deg);
+    }
+}
+
+@keyframes manBody{
+    from{
+        transform: rotateX(0deg);
+    }
+    to{
+        transform: rotateX(10deg);
+    }
+}
+
+@keyframes tree{
+    from{
+        transform: rotateZ(10deg);
+    }
+    to{
+        transform: rotateZ(-20deg);
+    }
+}
+
+@keyframes change-light {
+    0% {
+        stroke: #cd61f8;
+    }
+    25% {
+        stroke: #6ace66;
+    }
+    75% {
+        stroke: #2995c0;
+    }
+    100% {
+        stroke: #e92949;
+    }
+}
+
+.container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
